# CamelCase

./: .gitignore  CamelCase.opam  README.md  dune-project
.github/workflows/: test.yml
lib/: CamelCase.ml  Printer.ml  TestResult.ml  TestRunner.ml  Values.ml  dune
test/: Test.ml  dune
